feat (ColumnDef): I needed to override toString() in ColumnDef because without it, Java didn't have a contract to convert columns, causing tests to fail.
- When the code is executed, it calls the following code snippet: columns.get(i).toString(); Without the override, Java uses Objects.toString(), which generates a Class@hash, causing failures.